--- a/src/com/ldu/tabmaster/ui/TournamentBaseData.fxml
+++ b/src/com/ldu/tabmaster/ui/TournamentBaseData.fxml
@@ -57,7 +57,7 @@
                   <VBox prefHeight="200.0" prefWidth="100.0" spacing="12.0">
                      <children>
                         <Label fx:id="motionAmountLbl" text="Amount of motions" />
-                        <TableView prefHeight="200.0" prefWidth="200.0" tableMenuButtonVisible="true" VBox.vgrow="ALWAYS">
+                        <TableView fx:id="motionTable" prefHeight="200.0" prefWidth="200.0" tableMenuButtonVisible="true" VBox.vgrow="ALWAYS">
                            <columns>
                               <TableColumn prefWidth="48.0" resizable="false" text="ID" />
                               <TableColumn minWidth="50.0" prefWidth="250.0" text="Motion" />
@@ -76,7 +76,7 @@
                   <VBox prefHeight="200.0" prefWidth="100.0" spacing="12.0">
                      <children>
                         <Label fx:id="teamAmountLbl" text="Amount of teams" />
-                        <TableView prefHeight="200.0" prefWidth="200.0" tableMenuButtonVisible="true" VBox.vgrow="ALWAYS">
+                        <TableView fx:id="teamTable" prefHeight="200.0" prefWidth="200.0" tableMenuButtonVisible="true" VBox.vgrow="ALWAYS">
                            <columns>
                               <TableColumn prefWidth="48.0" resizable="false" text="ID" />
                               <TableColumn minWidth="0.0" prefWidth="200.0" text="Title" />
@@ -96,7 +96,7 @@
                   <VBox prefHeight="200.0" prefWidth="100.0" spacing="12.0">
                      <children>
                         <Label fx:id="judgeAmountLbl" text="Amount of judges" />
-                        <TableView prefHeight="200.0" prefWidth="200.0" tableMenuButtonVisible="true" VBox.vgrow="ALWAYS">
+                        <TableView fx:id="judgeTable" prefHeight="200.0" prefWidth="200.0" tableMenuButtonVisible="true" VBox.vgrow="ALWAYS">
                            <columns>
                               <TableColumn prefWidth="200.0" text="Name" />
                               <TableColumn minWidth="0.0" prefWidth="200.0" text="Surname" />
@@ -114,7 +114,7 @@
                   <VBox prefHeight="200.0" prefWidth="100.0" spacing="12.0">
                      <children>
                         <Label fx:id="wingAmountLbl" text="Amount of wings" />
-                        <TableView prefHeight="200.0" prefWidth="200.0" tableMenuButtonVisible="true" VBox.vgrow="ALWAYS">
+                        <TableView fx:id="wingTable" prefHeight="200.0" prefWidth="200.0" tableMenuButtonVisible="true" VBox.vgrow="ALWAYS">
                           <columns>
                             <TableColumn prefWidth="200.0" text="Name" />
                             <TableColumn minWidth="0.0" prefWidth="200.0" text="Surname" />
